--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="input">
-                <button class="register" onclick="goExam()">Login</button>
+                <button class="register" onclick="goInstruction()">Login</button>
                 </span></div>
             </div>
         </div>
