--- a/instruction.html
+++ b/instruction.html
@@ -21,7 +21,7 @@
                     <h1 style="margin-bottom: 30px;">Instructions</h1>
                     <div>Exam Duration 10 minutes</div><br>
                     <div>You must Sumbit Each Question</div><br>
-                    <div>Once You Submit You can not Change your Answer even if because it grade is entered</div><br>
+                    <div>Once You Submit You can not Change your Answer even if because its grade is entered</div><br>
                     <div>Once You Click Go to Result You can Get Your Grade </div><br>
                 </div>
                 <button class="submitQues" onclick="goToExam()">Start Exam</button>
